--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-git+https://github.com/Rapptz/discord.py
 websockets==6.0
 discord
-discord.py[voice]
+discord.py[voice]==1.7.3
 gtts
 PyGithub
 pyssml
